1.21, part 1